# PayTrack

./: .buildinfo  Dockerfile  README.md  compose.yml  conftest.py  genindex.html  index.html  manage.py  modules.html  objects.inv  paytrack.app.database.html  paytrack.app.html  paytrack.html  py-modindex.html  pyproject.toml  pytest.ini  release-notes.txt  release-title.txt  requirements.txt  search.html  searchindex.js
.github/workflows/: all_tests.yml  develop-pipeline.yml  every-pipeline.yml  main-pipeline.yml  release.yml  sphinx.yml  stage-pipeline.yml  static.yml  tests.yml
_sources/: index.rst.txt  paytrack.app.database.rst.txt  paytrack.app.rst.txt
app/: __init__.py  admin.py  auth.py  core.py  messages.py  service.py  services.py  taxes.py  utils.py
app/database/: __init__.py  engine.py  models.py
app/tests/: pytest.ini
app/tests/functional/: test_core.py
app/tests/integration/: test_auth.py  test_core.py  test_services.py
app/tests/unit/: taxes_list.txt  test_admin.py  test_auth.py  test_engine.py  test_services.py
app/web/: __init__.py
docs/: app.database.rst  app.tests.integration.rst  app.tests.unit.rst  conf.py  index.rst  modules.rst  paytrack.rst
docs/_build/doctrees/: app.database.doctree  app.doctree  app.tests.doctree  app.tests.integration.doctree  app.tests.unit.doctree  conftest.doctree  environment.pickle  index.doctree  manage.doctree  modules.doctree
docs/_build/html/: app.database.html  app.html  app.tests.html  app.tests.integration.html  app.tests.unit.html  conftest.html  genindex.html  index.html  manage.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
src/paytrack/: manage.py
src/paytrack/app/: core.py
src/paytrack/constants/: __init__.py  budget.py  category.py  currency.py  language.py  receiver.py  savings.py  setting.py  subscription.py  subscription_share.py  transaction.py  transaction_share.py  (+2 more)
tests/: __init__.py  conftest.py
tests/integration/: test_auth.py  test_core.py  test_savings.py  test_services.py  test_user.py
tests/unit/: test_admin.py  test_auth.py  test_currency.py  test_engine.py  test_language.py  test_receiver.py  test_services.py  test_subscription.py  test_subscription_share.py  test_transaction.py  test_user.py
(+103 files in other folders)
