[project]
name = "paytrack"
version = "0.6.1"
description = "Simple app to track your taxes. This project contains text app, and will webAPI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "psycopg[binary]>=3.2.9",
    "release",
    "sqlalchemy>=2.0.41",
    "tabulate>=0.9.0",
    "werkzeug>=3.1.3",
]

[project.scripts]
paytrack = "paytrack.manage:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "python-dotenv>=1.1.0",
]
doc = [
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.uv.sources]
release = { git = "https://github.com/Vronst/release_script.git" }
