[project]
name = "paytrack"
version = "0.7.0"
description = "Simple app to track your taxes."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "psycopg[binary]>=3.2.9",
    "release",
    "sqlalchemy>=2.0.41",
    "tabulate>=0.9.0",
    "werkzeug>=3.1.3",
]

[project.scripts]
paytrack = "paytrack.manage:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "flake8-pytest-style>=2.1.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.2.1",
    "python-dotenv>=1.1.0",
    "ruff>=0.12.4",
]
doc = [
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.uv.sources]
release = { git = "https://github.com/Vronst/release_script.git" }

[tool.pytest.ini_options]
markers = [
	"regression: Tests that ensure previous bugs stay fixed"
	]
testpaths = "tests/"
pythonpath = "src/"

[tool.ruff]
line-length = 79
indent-width = 4
exclude = [
	"docs"
	]

[tool.ruff.lint]
extend-select = [
	"UP",  # pyupgrade
	"D",  # pydocstyle
	"F",  # flake8 
	"E",  # pycodestyle
	"B",  # flake8-bugbear
	"SIM",  # flake8-simplify
	"I",  # isort
]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = ""

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"
